Fixed issue with collapsing navbar

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -322,7 +322,6 @@ header .intro-text .skills {
   font-size: 10px;
   border-color: white;
   margin-top: 20px;
-    
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
@@ -350,8 +349,8 @@ header .intro-text .skills {
 }
 .navbar-fixed-top .navbar-collapse a:hover:before {
   visibility: visible;
-  -webkit-transform: scaleX(.15);
-  transform: scaleX(.15);
+  -webkit-transform: scaleX(0.8);
+  transform: scaleX(0.8);
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -373,7 +372,7 @@ header .intro-text .skills {
     font-size: 1.5em;
   }
 }
-@media (max-width: 991px) {
+@media (max-width: 1024px) {
     .navbar-header {
         float: none;
     }
